# AgentEmergenceLoop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  feature_list.json  init.sh  progress.md  pyproject.toml  requirements.txt
references/ModernTSF/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  pyproject.toml
references/ModernTSF/.github/: PULL_REQUEST_TEMPLATE.md
references/ModernTSF/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_model.yml
references/ModernTSF/.github/workflows/: schema-check.yml
references/ModernTSF/configs/: base.toml
references/ModernTSF/configs/datasets/: aqshunyi.toml  aqwan.toml  beijing_air.toml  cauair_ccaq_st.toml  cauair_ccaq_ts.toml  electricity.toml  etth1.toml  etth2.toml  ettm1.toml  ettm2.toml  exchange.toml  fred_md.toml  ili.toml  metr_la.toml  nn5.toml  pems03.toml  pems04.toml  pems07.toml  pems08.toml  pems_bay.toml  pre_processed.toml  smoke.toml  solar.toml  stock_hs300.toml  synthetic_st.toml  traffic.toml  weather.toml
references/ModernTSF/configs/models/: AGCRN.toml  AMRC.toml  APN.toml  ARIMATS.toml  ASTGCN.toml  AirCade.toml  AirDualODE.toml  AirFormer.toml  AirPhyNet.toml  Amplifier.toml  Aurora.toml  AutoRegressiveTS.toml  Autoformer.toml  BayesianRidgeTS.toml  BiMamba.toml  BiST.toml  BigST.toml  CARD.toml  CATS.toml  CMoS.toml  COSA.toml  CatBoostTS.toml  CauAir.toml  CoRA.toml  CrossGNN.toml  CrossLinear.toml  Crossformer.toml  CycleNet.toml  D2STGNN.toml  DCRNN.toml  DFDGCN.toml  DGCRN.toml  DLinear.toml  DSFormer.toml  DSTAGNN.toml  DTAF.toml  DUET.toml  (+135 more)
references/ModernTSF/scripts/: make_smoke_data.py  smoke_external_models.py
references/ModernTSF/tool/: aggregate_results.py  convert_traffic.py  dataset_characteristics.py  gift_eval_download.py  inspect_config.py  leaderboard_build.py  new_dataset.py  new_model.py  plot_bubble.py  pre_process.py  rank_models.py  report.py  submit.py  tsf.py  visual_data.py  visualize_predictions.py
(+1290 files in other folders)
